fix word break and overflow

--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ body {
 }
 
 svg {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 foreignObject {
@@ -196,6 +197,7 @@ body.is-safari .node.work.media-ready {
 
 .work-modal-meta {
   color: #000;
+  word-break: break-word;
 }
 
 .work-modal-meta span,
@@ -316,10 +318,5 @@ body.editing-mode {
   .node {
     font-size: 14px;
     padding: 6px 10px;
-  }
-
-  svg {
-    width: 100vw;
-    height: 100vh;
   }
 }
